@@ -46,20 +46,18 @@ import org.apache.ofbiz.webapp.control.WebAppConfigurationException;
 public final class CsrfUtil {
 
     private static final String MODULE = CsrfUtil.class.getName();
-    private static String tokenNameNonAjax = UtilProperties.getPropertyValue("security", "csrf.tokenName.nonAjax",
-            "csrf");
+    private static String tokenNameNonAjax = UtilProperties.getPropertyValue("security", "csrf.tokenName.nonAjax", "csrf");
     private static ICsrfDefenseStrategy strategy;
     private static String strategyCanonicalName;
-    private static int cacheSize = (int) Long
-            .parseLong(UtilProperties.getPropertyValue("security", "csrf.cache.size", "5000"));
+    private static int cacheSize = (int) Long.parseLong(UtilProperties.getPropertyValue("security", "csrf.cache.size", "5000"));
     private static LinkedHashMap<String, Map<String, Map<String, String>>> csrfTokenCache =
             new LinkedHashMap<String, Map<String, Map<String, String>>>() {
-        private static final long serialVersionUID = 1L;
-
-        protected boolean removeEldestEntry(Map.Entry<String, Map<String, Map<String, String>>> eldest) {
-            return size() > cacheSize; // TODO use also csrf.cache.size here?
-        }
-    };
+                private static final long serialVersionUID = 1L;
+                @Override
+                protected boolean removeEldestEntry(Map.Entry<String, Map<String, Map<String, String>>> eldest) {
+                    return size() > cacheSize; // TODO use also csrf.cache.size here?
+                }
+            };
 
     private CsrfUtil() {
     }
@@ -68,9 +66,11 @@ public final class CsrfUtil {
         try {
             String className = UtilProperties.getPropertyValue("security", "csrf.defense.strategy",
                     NoCsrfDefenseStrategy.class.getCanonicalName());
-            Class<?> c = Class.forName(className);
+            Class<? extends ICsrfDefenseStrategy> c =
+                    Class.forName(className).asSubclass(
+                            ICsrfDefenseStrategy.class);
             strategyCanonicalName = c.getCanonicalName();
-            setStrategy((ICsrfDefenseStrategy) c.newInstance());
+            setStrategy(c.getConstructor().newInstance());
         } catch (Exception e) {
             Debug.logError(e, MODULE);
             setStrategy(new NoCsrfDefenseStrategy());
@@ -99,6 +99,7 @@ public final class CsrfUtil {
                 tokenMap = new LinkedHashMap<String, String>() {
                     private static final long serialVersionUID = 1L;
 
+                    @Override
                     protected boolean removeEldestEntry(Map.Entry<String, String> eldest) {
                         return size() > cacheSize;
                     }
@@ -111,6 +112,7 @@ public final class CsrfUtil {
                 tokenMap = new LinkedHashMap<String, String>() {
                     private static final long serialVersionUID = 1L;
 
+                    @Override
                     protected boolean removeEldestEntry(Map.Entry<String, String> eldest) {
                         return size() > cacheSize;
                     }
@@ -180,7 +182,7 @@ public final class CsrfUtil {
         }
 
         if (pathOrRequestUri.contains("&#x2f;")) {
-            pathOrRequestUri = pathOrRequestUri.replaceAll("&#x2f;", "/");
+            pathOrRequestUri = pathOrRequestUri.replace("&#x2f;", "/");
         }
 
         String requestUri = getRequestUriWithSubFolderLimit(getRequestUriFromPath(pathOrRequestUri));
